# Meta-heuristic-Regression

./: CMakeLists.txt  main.cpp  readme.md  setup.py  test_python.py
.github/workflows/: ci.yml
config/: cfg.yaml
genetic_algorithm.egg-info/: PKG-INFO  SOURCES.txt
include/: GA.hpp
logs/: fitness_log_2025-01-06_12-34-20.csv  log.csv
scripts/: plot.py
src/: GA.cpp  ga_bindings.cpp
tests/: GATest.cpp
